tests/NormalTests/paczka1/fuzzy1/30950387.err
Error in line 7: lkBWIi8e7vR S840 82,7
Error in line 4: hHQveClBw A141 74,2
Error in line 18: hHQveClBw S840 98,4
Error in line 23: hHQveClBw A139 162,0
Error in line 31: sMaDUw A141 -1,7
Error in line 32: S734 A141 72,6
